# libjaka-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_cn.md  build.rs  libjaka.pyi
.github/workflows/: CI.yml  release.yml
assets/jaka/: jaka_a5.urdf  jaka_zu30.urdf
examples/: 1.csv  5x5rect.csv  custom_curve.rs  dd.md  debug_log.md  designed_path.rs  move_to_a_point.rs  new_robot.rs  rect.csv
include/: libjaka.h
scripts/: 3rect.csv  down_sample.csv  draw.py  draw_ori.py  lines.csv  new_robot.py  output666  output_10_8  output_3_10  output_8_5  output_spiral  path_visualization.py  star.csv  test_func.py  visualization.py
src/: assets.rs  jaka.rs  jaka_mini.rs  lib.rs  network.rs  params.rs  robot.rs  robot_impl.rs
src/ffi/: mod.rs  to_cxx.rs  to_py.rs
src/jaka/: jaka_a.rs  jaka_al.rs  jaka_lens.rs  jaka_mini.rs  jaka_pro.rs  jaka_s.rs  jaka_se_vi.rs  jaka_zu.rs
src/types/: mod.rs  robot_state.rs  robot_type.rs  type.json
