[package]
name = "libjaka-rs"
version = "0.1.7"
edition = "2024"
authors = ["Yixing <yanjizhou312@163.com>"]
readme = "README.md"
repository = "https://github.com/Robot-Exp-Platform/libjaka-rs"
license = "Apache-2.0"
description = "Rust bindings for the Jaka robot"
categories = ["science::robotics"]
keywords = ["jaka", "robot", "libjaka"]

[dependencies]
pyo3 = { version = "0.25", optional = true, features = [
    "extension-module",
    "multiple-pymethods",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "3.14"
nalgebra = "0.34"
bincode = "1.3"
robot_behavior = { version = "0.4.7" }

[features]
default = []
debug = []
ffi = []
to_py = ["pyo3", "ffi"]
