[package]
name = "libjaka"
version = "0.1.7"
edition = "2024"
authors = ["Yixing <yanjizhou312@163.com>"]
readme = "README.md"
repository = "https://github.com/Robot-Exp-Platform/libjaka-rs"
license = "Apache-2.0"
description = "Rust bindings for the Jaka robot"
categories = ["science::robotics"]
keywords = ["jaka", "robot", "libjaka"]

[lib]
name = "libjaka"
crate-type = ["cdylib", "rlib"]

[dependencies]
robot_behavior = "0.4.8"
pyo3 = { version = "0.26", optional = true, features = [
    "extension-module",
    "multiple-pymethods",
] }
cxx = { version = "1.0", optional = true }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "3.14"
bincode = "1.3"
paste = "1.0"

[build-dependencies]
cxx-build = "1.0"

[features]
default = []
debug = []
ffi = []
to_py = ["pyo3", "ffi", "robot_behavior/to_py"]
to_cxx = ["ffi", "robot_behavior/to_cxx"]
